<resources>
    <string name="app_name">Contacts - Práctica 3</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_agenda">Agenda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name_en">Contact name</string>
    <string name="phone_number_en">Phone number</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_phone">Contact phone</string>
    <string name="about_this_contact">About this contact</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="create_appointment">Create appointment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="save">Save</string>
    <string name="add_contact">Add contact</string>
    <string name="update">Update</string>
    <string name="edit_contact">Edit contact</string>
    <string name="close">Close</string>
    <string name="delete_contact">Delete contact</string>
    <string name="check_all">Check all appointments</string>
    <string name="appointment_date">Appointment date</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="minutes">Minutes</string>
    <string name="hour">Hour</string>
    <string name="title">Title</string>
    <string name="who">Who</string>
    <string name="edit_appointment">Edit appointment</string>
    <string name="delete_appointment">Delete appointment</string>
</resources>