<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_rounded_bg"
    android:backgroundTint="@color/primaryColor"
    android:baselineAligned="true"
    android:orientation="vertical"
    android:padding="5dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end">

        <ImageButton
            android:id="@+id/contact_details_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_clear_white"/>

    </LinearLayout>

    <TextView
        android:id="@+id/contact_details_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/contact_name"
        android:textColor="@color/primaryTextColor"
        app:drawableStartCompat="@drawable/ic_person_white"/>

    <TextView
        android:id="@+id/contact_details_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeMinTextSize="18sp"
        android:autoSizeTextType="uniform"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:text="@string/contact_phone"
        android:textColor="@color/primaryTextColor"
        app:drawableStartCompat="@drawable/ic_phone_white" />

    <TextView
        android:id="@+id/contact_details_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autoSizeMaxTextSize="25sp"
        android:autoSizeTextType="uniform"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:maxLines="3"
        android:text="@string/about_this_contact"
        android:textColor="@color/primaryTextColor"
        app:drawableStartCompat="@drawable/ic_info_white"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/contact_details_call_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/call"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/contact_details_message_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2.5dp"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/message"
            android:textAllCaps="false"/>

    </LinearLayout>

</LinearLayout>

