<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_bg"
    android:backgroundTint="@color/primaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="true"
        android:orientation="vertical"
        android:padding="15dp"
        android:scrollbars="vertical">

        <ImageButton
            android:id="@+id/contact_form_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/close"
            android:src="@drawable/ic_clear_white"
            android:layout_marginBottom="10dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_form_input_layout_name"
            style="@style/OutlinedBoxCustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_name"
            app:hintTextColor="@color/primaryTextColor">

            <EditText
                android:id="@+id/contact_form_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_person_white"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_form_input_layout_phone"
            style="@style/OutlinedBoxCustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/contact_phone"
            app:hintTextColor="@color/primaryTextColor">

            <EditText
                android:id="@+id/contact_form_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_phone_white"
                android:drawablePadding="15dp"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textCursorDrawable="@null"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/contact_form_input_layout_about"
            style="@style/OutlinedBoxCustomTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/about_this_contact"
            app:hintTextColor="@color/primaryTextColor">

            <EditText
                android:id="@+id/contact_form_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_info_white"
                android:drawablePadding="15dp"
                android:inputType="text"
                android:textColor="@color/white"
                android:textCursorDrawable="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_form_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/secondaryColor"
            android:text="@string/save"
            android:textAllCaps="false"/>

    </LinearLayout>

</RelativeLayout>
