<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:backgroundTint="@color/primaryColor"
    android:elevation="5dp"
    android:foreground="@drawable/custom_ripple_effect"
    android:foregroundTint="@color/secondaryColor"
    app:cardCornerRadius="5dp"
    app:contentPadding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

        <!-- Name -->
        <TextView
            android:id="@+id/recyclerview_contact_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="25sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/contact_name_en"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:drawableStartCompat="@drawable/ic_person_white"/>


        <!-- Phone number -->
        <TextView
            android:id="@+id/recyclerview_contact_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeTextType="uniform"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/phone_number_en"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_phone_white"/>


    </LinearLayout>

        <ImageButton
            android:id="@+id/recyclerview_contact_options_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_ripple_effect"
            android:contentDescription="@string/edit_contact"
            android:src="@drawable/ic_options_white" />

    </LinearLayout>
</androidx.cardview.widget.CardView>