<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/contact_details_scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_rounded_bg"
    android:backgroundTint="@color/primaryColor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="true"
            android:orientation="vertical"
            android:padding="15dp"
            android:scrollbars="vertical">

            <ImageButton
                android:id="@+id/appointment_form_close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:background="@drawable/custom_ripple_effect"
                android:contentDescription="@string/close"
                android:src="@drawable/ic_clear_white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_form_input_layout_title"
                style="@style/OutlinedBoxCustomTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                app:hintTextColor="@color/primaryTextColor">

                <EditText
                    android:id="@+id/appointment_form_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_title_white"
                    android:drawablePadding="15dp"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:textCursorDrawable="@null"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:text="Date:"
                android:textColor="@color/primaryTextColor"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/appointment_form_spinner_months"
                    style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/month"
                    app:endIconTint="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/appointment_form_auto_months"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/white" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/appointment_form_spinner_years"
                    style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:hint="@string/year"
                    app:endIconTint="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/appointment_form_auto_years"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:inputType="none"
                        android:textColor="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_form_spinner_days"
                style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/day"
                app:endIconTint="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/appointment_form_auto_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:text="Time:"
                android:textColor="@color/primaryTextColor"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/appointment_form_spinner_hours"
                    style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hour"
                    app:endIconTint="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/appointment_form_auto_hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/appointment_form_spinner_minutes"
                    style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:hint="@string/minutes"
                    app:endIconTint="@color/white">

                    <AutoCompleteTextView
                        android:id="@+id/appointment_form_auto_minutes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:textColor="@color/white"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:autoSizeMaxTextSize="30sp"
                android:autoSizeMinTextSize="15sp"
                android:autoSizeTextType="uniform"
                android:text="With:"
                android:textColor="@color/primaryTextColor"
                android:textSize="25sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/appointment_form_spinner_who"
                style="@style/OutlinedBoxCustomMenuInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who"
                app:endIconTint="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/appointment_form_auto_who"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appointment_form_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/secondaryColor"
                android:text="@string/save"
                android:textAllCaps="false"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
